<resources>
    <string name="app_name">Current</string>
    <string name="PLACEHOLDER">PLACEHOLDER</string>
    <string name="et_login_email">Email Address</string>
    <string name="et_login_password">Password</string>
    <string name="tv_login_register"><u>Create Account</u></string>
    <string name="btn_login_login">Login</string>
    <string name="cb_login_staySignedIn">Stay signed in</string>
    <string name="iv_login_logo">Main Logo</string>
    <string name="iv_login_bg">Background Image</string>
    <string name="et_register_email">Email Address</string>
    <string name="et_register_password">Password</string>
    <string name="et_register_confirmPass">Retype Password</string>
    <string name="et_register_firstName">First Name</string>
    <string name="et_register_lastName">Last Name</string>
    <string name="et_register_nickname">Nickname</string>
    <string name="btn_register_register">Register</string>
    <string name="iv_register_logo">Main Logo</string>
    <string name="iv_register_bg">Background Image</string>
    <string name="tv_verification_verificationMessage">A verification link has been sent to your Email address.
        Please check your inbox and follow the instructions to verify your account.</string>
    <string name="btn_verification_ok">OK</string>
    <string name="tv_home_weatherMessage">Weather Forecast</string>
    <string name="tv_weather_weatherHub">WeatherHub</string>
    <string name="tv_weather_currentLocation">"Current Location: "</string>
    <string name="tv_weather_currentCity">Tacoma, WA</string>
    <string name="tv_weather_currentState">Washington</string>
    <string name="et_weather_searchByZip">Search by Zip</string>
    <string name="tv_weather_map"><u>Map View</u></string>
    <string name="tv_weather_saveLocation"><u>Save Current Location</u></string>
    <string name="tv_weather_savedLocations"><u>View Saved Locations</u></string>
    <string name="tv_weather_currentConditions">Current Conditions</string>
    <string name="tv_weather_24hourForecast">24-Hour Forecast</string>
    <string name="tv_weather_10dayForecast">10-Day Forecast</string>
    <string name="btn_weather_search">Search</string>
    <string name="tv_weather_temperature">Temperature:</string>
    <string name="tv_weather_tempMin">Today\'s High:</string>
    <string name="tv_weather_tempMax">Today\'s Low:</string>
    <string name="tv_weather_wind">Wind:</string>
    <string name="tv_weather_description">Description:</string>
    <string name="tv_weather_precipitation">Precipitation:</string>
    <string name="tv_weather_humidity">Humidity:</string>
    <string name="tv_weather_sunrise">Sunrise:</string>
    <string name="tv_weather_sunset">Sunset:</string>
    <string name="tv_weather_tempunitsym">°</string>
    <string name="tv_weather_windunits_imperial">MPH</string>
    <string name="tv_weather_windunits_metric">KPH</string>
    <string name="tv_weather_temperatureDefault">72</string>
    <string name="tv_weather_tempMinDefault">60</string>
    <string name="tv_weather_tempMaxDefault">80</string>
    <string name="tv_weather_windDefault">5</string>
    <string name="tv_weather_descriptionDefault">Sunny</string>
    <string name="tv_weather_precipitationDefault">85%</string>
    <string name="tv_weather_humidityDefault">50%</string>
    <string name="tv_weather_sunriseDefault">8 AM</string>
    <string name="tv_weather_sunsetDefault">6 PM</string>
    <string name="tv_weather_24hourNow">Now</string>
    <string name="tv_weather_24hour2">Hour 2</string>
    <string name="tv_weather_24hour3">Hour 3</string>
    <string name="tv_weather_24hour4">Hour 4</string>
    <string name="tv_weather_24hour5">Hour 5</string>
    <string name="tv_weather_24hour6">Hour 6</string>
    <string name="tv_weather_24hour7">Hour 7</string>
    <string name="tv_weather_24hour8">Hour 8</string>
    <string name="tv_weather_24hour9">Hour 9</string>
    <string name="tv_weather_24hour10">Hour 10</string>
    <string name="tv_weather_24hour11">Hour 11</string>
    <string name="tv_weather_24hour12">Hour 12</string>
    <string name="tv_weather_24hour13">Hour 13</string>
    <string name="tv_weather_24hour14">Hour 14</string>
    <string name="tv_weather_24hour15">Hour 15</string>
    <string name="tv_weather_24hour16">Hour 16</string>
    <string name="tv_weather_24hour17">Hour 17</string>
    <string name="tv_weather_24hour18">Hour 18</string>
    <string name="tv_weather_24hour19">Hour 19</string>
    <string name="tv_weather_24hour20">Hour 20</string>
    <string name="tv_weather_24hour21">Hour 21</string>
    <string name="tv_weather_24hour22">Hour 22</string>
    <string name="tv_weather_24hour23">Hour 23</string>
    <string name="tv_weather_24hour24">Hour 24</string>
    <string name="iv_weather_24hourNow">Now</string>
    <string name="iv_weather_24hour2">Hour 2</string>
    <string name="iv_weather_24hour3">Hour 3</string>
    <string name="iv_weather_24hour4">Hour 4</string>
    <string name="iv_weather_24hour5">Hour 5</string>
    <string name="iv_weather_24hour6">Hour 6</string>
    <string name="iv_weather_24hour7">Hour 7</string>
    <string name="iv_weather_24hour8">Hour 8</string>
    <string name="iv_weather_24hour9">Hour 9</string>
    <string name="iv_weather_24hour10">Hour 10</string>
    <string name="iv_weather_24hour11">Hour 11</string>
    <string name="iv_weather_24hour12">Hour 12</string>
    <string name="iv_weather_24hour13">Hour 13</string>
    <string name="iv_weather_24hour14">Hour 14</string>
    <string name="iv_weather_24hour15">Hour 15</string>
    <string name="iv_weather_24hour16">Hour 16</string>
    <string name="iv_weather_24hour17">Hour 17</string>
    <string name="iv_weather_24hour18">Hour 18</string>
    <string name="iv_weather_24hour19">Hour 19</string>
    <string name="iv_weather_24hour20">Hour 20</string>
    <string name="iv_weather_24hour21">Hour 21</string>
    <string name="iv_weather_24hour22">Hour 22</string>
    <string name="iv_weather_24hour23">Hour 23</string>
    <string name="iv_weather_24hour24">Hour 24</string>
    <string name="tv_weather_24hourNowDescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour2DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour3DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour4DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour5DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour6DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour7DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour8DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour9DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour10DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour11DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour12DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour13DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour14DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour15DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour16DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour17DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour18DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour19DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour20DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour21DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour22DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour23DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hour24DescriptionDefault">Sunny</string>
    <string name="tv_weather_24hourNowTemperatureDefault">72</string>
    <string name="tv_weather_24hour2TemperatureDefault">72</string>
    <string name="tv_weather_24hour3TemperatureDefault">72</string>
    <string name="tv_weather_24hour4TemperatureDefault">72</string>
    <string name="tv_weather_24hour5TemperatureDefault">72</string>
    <string name="tv_weather_24hour6TemperatureDefault">72</string>
    <string name="tv_weather_24hour7TemperatureDefault">72</string>
    <string name="tv_weather_24hour8TemperatureDefault">72</string>
    <string name="tv_weather_24hour9TemperatureDefault">72</string>
    <string name="tv_weather_24hour10TemperatureDefault">72</string>
    <string name="tv_weather_24hour11TemperatureDefault">72</string>
    <string name="tv_weather_24hour12TemperatureDefault">72</string>
    <string name="tv_weather_24hour13TemperatureDefault">72</string>
    <string name="tv_weather_24hour14TemperatureDefault">72</string>
    <string name="tv_weather_24hour15TemperatureDefault">72</string>
    <string name="tv_weather_24hour16TemperatureDefault">72</string>
    <string name="tv_weather_24hour17TemperatureDefault">72</string>
    <string name="tv_weather_24hour18TemperatureDefault">72</string>
    <string name="tv_weather_24hour19TemperatureDefault">72</string>
    <string name="tv_weather_24hour20TemperatureDefault">72</string>
    <string name="tv_weather_24hour21TemperatureDefault">72</string>
    <string name="tv_weather_24hour22TemperatureDefault">72</string>
    <string name="tv_weather_24hour23TemperatureDefault">72</string>
    <string name="tv_weather_24hour24TemperatureDefault">72</string>
    <string name="tv_weather_10dayToday">Today</string>
    <string name="tv_weather_10dayTwo">Day 2</string>
    <string name="tv_weather_10dayThree">Day 3</string>
    <string name="tv_weather_10dayFour">Day 4</string>
    <string name="tv_weather_10dayFive">Day 5</string>
    <string name="tv_weather_10daySix">Day 6</string>
    <string name="tv_weather_10daySeven">Day 7</string>
    <string name="tv_weather_10dayEight">Day 8</string>
    <string name="tv_weather_10dayNine">Day 9</string>
    <string name="tv_weather_10dayTen">Day 10</string>
    <string name="iv_weather_10dayOne">Day 1 Image</string>
    <string name="iv_weather_10dayTwo">Day 2 Image</string>
    <string name="iv_weather_10dayThree">Day 3 Image</string>
    <string name="iv_weather_10dayFour">Day 4 Image</string>
    <string name="iv_weather_10dayFive">Day 5 Image</string>
    <string name="iv_weather_10daySix">Day 6 Image</string>
    <string name="iv_weather_10daySeven">Day 7 Image</string>
    <string name="iv_weather_10dayEight">Day 8 Image</string>
    <string name="iv_weather_10dayNine">Day 9 Image</string>
    <string name="iv_weather_10dayTen">Day 10 Image</string>
    <string name="tv_weather_10dayOneDescriptionDefault">Sunny</string>
    <string name="tv_weather_10daytwoDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayThreeDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayFourDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayFiveDescriptionDefault">Sunny</string>
    <string name="tv_weather_10daySixDescriptionDefault">Sunny</string>
    <string name="tv_weather_10daySevenDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayEightDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayNineDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayTenDescriptionDefault">Sunny</string>
    <string name="tv_weather_10dayOneTemperatureDefault">72</string>
    <string name="tv_weather_10daytwoTemperatureDefault">72</string>
    <string name="tv_weather_10dayThreeTemperatureDefault">72</string>
    <string name="tv_weather_10dayFourTemperatureDefault">72</string>
    <string name="et_chat_create_name">Chatroom Name</string>
    <string name="et_chat_create_description">Chatroom Description (Optional)</string>
    <string name="btn_chat_create_create">Create Chatroom</string>
    <string name="tv_chat_create_contacts">Contacts</string>
    <string name="tv_chat_create_add">Contacts to invite to this room</string>
</resources>