<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_weather_weatherHub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WeatherFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_weather_weatherHub"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_weather_upperLayout"
        android:layout_width="360dp"
        android:layout_height="86dp"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/layout_weather_currentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_weather_currentLocation"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_currentLocation"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_weather_currentCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_currentCity"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_weather_currentState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_currentState"
                android:textColor="@android:color/black"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_weather_search"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_weather_searchByZip"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/et_weather_searchByZip"
                android:inputType="textPersonName"
                android:text="@string/et_weather_searchByZip"
                android:textColor="@android:color/darker_gray"
                android:autofillHints="" tools:targetApi="o" />

            <Button
                android:id="@+id/btn_weather_search"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_weather_search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_weather_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_weather_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_map"
                android:textAlignment="viewStart"
                android:textColor="@android:color/holo_blue_dark"
                android:textIsSelectable="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_weather_saveCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_saveLocation"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_weather_viewSavedLocations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_weather_savedLocations"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_weather_currentConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_weather_currentConditions"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_weather_upperLayout" />

    <TextView
        android:id="@+id/tv_weather_24hourForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_weather_24hourForecast"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_weather_currentConditions" />

    <TextView
        android:id="@+id/tv_weather_10dayForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_weather_10dayForecast"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_weather_24hourForecast" />

    <ScrollView
        android:id="@+id/sv_weather_currentConditions"
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="310dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_currentConditions">

        <LinearLayout
            android:id="@+id/layout_weather_currentConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_weather_currentTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_weather_currentTemperature"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_temperature"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentTemperatureDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_temperatureDefault"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentMinTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_weather_currentMinimum"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_tempMin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentMinimumDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_tempMinDefault" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentMaxTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_weather_currentMaximum"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_tempMax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentMaximumDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_tempMaxDefault" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentDescription"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentDescriptionDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_descriptionDefault" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentHumidity"
                    android:layout_width="76dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_humidity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentHumidityDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_humidityDefault" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentPrecipitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentPrecipitation"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_precipitation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentPrecipitationDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_precipitationDefault"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentWind"
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_wind"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentWindDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_windDefault" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentSunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentSunrise"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_sunrise"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentSunriseDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_sunriseDefault" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_weather_currentSunset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_weather_currentSunset"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_weather_sunset"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_currentSunsetDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_weather_sunsetDefault" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sv_weather_24hourForecast"
        android:layout_width="310dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_24hourForecast">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/sv_weather_10dayForecast"
        android:layout_width="310dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_10dayForecast">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>